--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 </nav>
 
-<div class="container-fluid bg-dark text-white">
+<div class="container-fluid">
   <div class="row">
     <div class="col m-5">
       <h2>About Me</h2>
@@ -50,7 +50,10 @@
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
+  
 </div>
+
+
 
 <div class="p-2 bg-dark text-white text-center">
   <p>Footer</p>
