--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100076144428348" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/wiim4/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/viivi-hyv%C3%B6nen-86626b225/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
