--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1><a href="index.html">Viivi Hyvönen</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>software developer student @ tredu tampere</h2>
+      <h2>software developer student @ tredu Tampere</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -85,7 +85,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+358 (0)400 668040</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tampere, FIN</span></li>
               </ul>
             </div>
@@ -101,73 +101,25 @@
             Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
             Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
           </p>
+
+          <div class="section-title">
+            <h2>Skills</h2>
+          </div>
+    
+          <div class="row skills-content">
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <span>Javascript</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>Java</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>HTML / CSS</span></li>
+              </ul>
+            </div>
+          </div>
+
         </div>
       </div>
 
     </div><!-- End About Me -->
-
-    <!-- ======= Skills  ======= -->
-    <div class="skills container">
-
-      <div class="section-title">
-        <h2>Skills</h2>
-      </div>
-
-      <div class="row skills-content">
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">HTML <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">JavaScript <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Photoshop <i class="val">55%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div><!-- End Skills -->
 
   </section><!-- End About Section -->
 
@@ -185,7 +137,8 @@
           <div class="resume-item">
             <h4>ohjelmistokehittäjä</h4>
             <h5>2021 - 2023</h5>
-            <p><em>Tredu, FIN</em></p>
+            <p>Tredu<br></p>
+            <p><em>Tampere, FIN</em></p>
           </div>
         </div>
 
@@ -220,8 +173,6 @@
 
       <div class="row portfolio-container">
 
-
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -234,7 +185,7 @@
               </div>
             </div>
           </div>
-        </div>>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
@@ -302,7 +253,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>012345678910</p>
+            <p>+358 (0)400 668040</p>
           </div>
         </div>
       </div>
