--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -71,7 +71,7 @@
             </ul>
 
             <p>
-              My second html -page. Done as school work. 
+              My second html -page.<br> Done as a school work. 
             </p>
           </div>
 
