--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1><a href="index.html">Viivi Hyvönen</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>software developer student @ tredu Tampere</h2>
+      <h2>software developer student @ tredu tampere</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -78,8 +78,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>software developer student</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Future front-ent developer.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -109,9 +108,11 @@
           <div class="row skills-content">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <span>Javascript</span></li>
-                <li><i class="bi bi-chevron-right"></i> <span>Java</span></li>
-                <li><i class="bi bi-chevron-right"></i> <span>HTML / CSS</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>Javascript basics</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>Java basics</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>Python basics</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>PHP basics</span></li>
+                <li><i class="bi bi-chevron-right"></i> <span>HTML / CSS basics</span></li>
               </ul>
             </div>
           </div>
@@ -177,7 +178,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
+              <h4>Web</h4>
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
