--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>software developer student</h3>
           <p class="fst-italic">
-            Future front-ent developer.
+            Future front-ent developer
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.viimacreations.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+358 (0)400 668040</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tampere, FIN</span></li>
               </ul>
@@ -97,8 +97,7 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+           I am especially interested about front-end development but I'm open for every opportunity to learn new things in IT industry and become an IT professional.
           </p>
 
           <div class="section-title">
