--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -47,7 +47,8 @@
 
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portfolio</h2>
-
+            
+<!-- 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -57,21 +58,21 @@
 
               </div>
               <div class="swiper-pagination"></div>
-            </div>
+            </div>  -->
 
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: React - one page application</li>
               <li><strong>Client</strong>: School work</li>
-              <li><strong>Project date</strong>: November 2021</li>
-              <li><strong>Project URL</strong>: <a href="#"></a></li>
+              <li><strong>Project date</strong>: May 2022</li>
+              <li><strong>Project URL</strong>: <a href="./assets/fanikauppa/index.html">Fanikauppa (react)</a></li>
             </ul>
 
             <p>
-              My second html -page.<br> Done as a school work. 
+              First React application.<br> Done as a school work. 
             </p>
           </div>
 
