--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -68,7 +68,7 @@
               <li><strong>Category</strong>: React - one page application</li>
               <li><strong>Client</strong>: School work</li>
               <li><strong>Project date</strong>: May 2022</li>
-              <li><strong>Project URL</strong>: <a href="./assets/fanikauppa/index.html">Fanikauppa (react)</a></li>
+              <li><strong>Project URL</strong>: <a href="/fanikauppa/index.html">Fanikauppa (react)</a></li>
             </ul>
 
             <p>
