--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -48,24 +48,24 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portfolio</h2>
             
-<!-- 
+
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio1.png" alt="">
+                  <img src="assets/img/fanikauppa.PNG" alt="">
                 </div>
 
               </div>
               <div class="swiper-pagination"></div>
-            </div>  -->
+            </div> 
 
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: React - one page application</li>
+              <li><strong>Category</strong>: React - single page application</li>
               <li><strong>Client</strong>: School work</li>
               <li><strong>Project date</strong>: May 2022</li>
               <li><strong>Project URL</strong>: <a href="/fanikauppa/index.html" target="_blank">Fanikauppa (react)</a></li>
