--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <h4>Web</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/fanikauppa.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="/fanikauppa/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
