--- a/index.html
+++ b/index.html
@@ -164,10 +164,6 @@
 
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-web">Web</li>
-          </ul>
         </div>
       </div>
 
@@ -177,10 +173,20 @@
           <div class="portfolio-wrap">
             <img src="assets/img/fanikauppa.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web</h4>
-              <p>Web</p>
               <div class="portfolio-links">
-                <a href="/fanikauppa/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                <a href="/fanikauppa/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="react"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/fanikauppa.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="http://urheilupaivakirja.kartan21.treok.io/" data-gallery="portfolioGallery" class="portfolio-lightbox" title="php and sql"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
