--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -72,11 +72,54 @@
             </ul>
 
             <p>
-              First React application.<br> Done as a school work. 
+             My first React single-page application.
             </p>
           </div>
 
         </div>
+
+
+
+
+        <div class="col-lg-8">
+          <h2 class="portfolio-title">Portfolio</h2>
+          
+
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+
+              <div class="swiper-slide">
+                <img src="assets/img/urheilupvakirja.PNG" alt="">
+                <img src="assets/img/urheilupvakirja2.PNG" alt="">
+                <img src="assets/img/urheilupvakirja3.PNG" alt="">
+                <img src="assets/img/urheilupvakirja4.PNG" alt="">
+              </div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+          </div> 
+
+        </div>
+
+        <div class="col-lg-4 portfolio-info">
+          <h3>Project information</h3>
+          <ul>
+            <li><strong>Category</strong>: PHP - SQL</li>
+            <li><strong>Client</strong>: School work</li>
+            <li><strong>Project date</strong>: May 2022</li>
+            <li><strong>Project URL</strong>: <a href="http://urheilupaivakirja.kartan21.treok.io/" target="_blank">Urheilupäiväkirja</a></li>
+          </ul>
+
+          <p>
+            Sportsdiary for students and teacher<br>
+          </p>
+        </div>
+
+      </div>
+
+
+
+
 
       </div>
     </div><!-- End Portfolio Details -->
