--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/fanikauppa.PNG" class="img-fluid" alt="">
+            <img src="assets/img/urheilupvakirja4.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="http://urheilupaivakirja.kartan21.treok.io/" data-gallery="portfolioGallery" class="portfolio-lightbox" title="php and sql"><i class="bx bx-plus"></i></a>
