--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
             <img src="assets/img/fanikauppa.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
-                <a href="/fanikauppa/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="react"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -186,8 +185,7 @@
             <img src="assets/img/urheilupvakirja4.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
-                <a href="http://urheilupaivakirja.kartan21.treok.io/" data-gallery="portfolioGallery" class="portfolio-lightbox" title="php and sql"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details2.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
