--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -48,35 +48,31 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portfolio</h2>
             
-
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div>
-                  <img src="assets/img/fanikauppa.PNG" alt="">
-                </div>
-
+          <div class="portfolio-details-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+              <div>
+                <img src="assets/img/urheilupvakirja3.PNG" alt="">
               </div>
-              <div class="swiper-pagination"></div>
-            </div> 
-
-          </div>
-
-          <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
-            <ul>
-              <li><strong>Category</strong>: React - single page application</li>
-              <li><strong>Client</strong>: School work</li>
-              <li><strong>Project date</strong>: May 2022</li>
-              <li><strong>Project URL</strong>: <a href="/fanikauppa/index.html" target="_blank">Fanikauppa (react)</a></li>
-            </ul>
-
-            <p>
-             My first React single-page application.
-            </p>
-          </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div> 
 
         </div>
+
+        <div class="col-lg-4 portfolio-info">
+          <h3>Project information</h3>
+          <ul>
+            <li><strong>Category</strong>: PHP - SQL</li>
+            <li><strong>Client</strong>: School work</li>
+            <li><strong>Project date</strong>: May 2022</li>
+            <li><strong>Project URL</strong>: <a href="http://urheilupaivakirja.kartan21.treok.io/" target="_blank">Urheilupäiväkirja</a></li>
+          </ul>
+
+          <p>
+            Sportsdiary for students and teacher<br>
+          </p>
+        </div>
+
     </div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
