--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-wrap">
             <img src="assets/img/fanikauppa.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -180,7 +180,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-wrap">
             <img src="assets/img/urheilupvakirja3.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
