--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Portfolio</h2>
+            <h2 class="portfolio-title">React - fanikauppa</h2>
             
 
             <div class="portfolio-details-slider swiper">
